--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tw-nhi-service"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Magic Len <len@magiclen.org>"]
 edition = "2021"
 repository = "https://github.com/magiclen/tw-nhi-service"
@@ -25,6 +25,8 @@ serde = { version = "1", features = ["derive"] }
 
 tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
+atty = "0.2"
+enable-ansi-support = "0.2"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 hyper = { version = "0.14", features = ["full"] }
 tower = "0.4"
@@ -34,4 +36,3 @@ axum = "0.6"
 pcsc = "2"
 chrono = { version = "0.4", features = ["serde"] }
 encoding_rs = "0.8"
-atty = "0.2"
