--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,8 @@ authors = ["Magic Len <len@magiclen.org>"]
 edition = "2021"
 repository = "https://github.com/magiclen/tw-nhi-service"
 homepage = "https://magiclen.org/tw-nhi-service"
-keywords = ["smart-card", "pcsc", "nhi-card"]
-categories = ["web-programming::http-client"]
+keywords = ["smart-card", "pcsc", "nhi-card", "taiwan"]
+categories = ["command-line-utilities"]
 description = "Read Taiwan NHI cards via HTTP API. 透過 HTTP API 讀取中華民國健保卡。"
 readme = "README.md"
 license = "MIT"
