--- a/.github/workflows/ci-version.yml
+++ b/.github/workflows/ci-version.yml
@@ -16,11 +16,14 @@ jobs:
         os:
           - ubuntu-latest
         toolchain:
+          - 1.59
           - stable
           - nightly
         target:
           - x86_64-unknown-linux-gnu
-    name: Test ${{ matrix.toolchain }} on ${{ matrix.os }} to ${{ matrix.target }}
+        features:
+          -
+    name: Test ${{ matrix.toolchain }} on ${{ matrix.os }} to ${{ matrix.target }} (${{ matrix.features }})
     runs-on: ${{ matrix.os }}
     steps:
       - name: Install libpcsclite-dev
@@ -28,15 +31,12 @@ jobs:
           sudo apt update
           sudo apt install libpcsclite-dev
       - uses: actions/checkout@v3
-      - uses: actions-rs/toolchain@v1
+      - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
-          profile: minimal
           toolchain: ${{ matrix.toolchain }}
           target: ${{ matrix.target }}
-          override: true
-      - run: cargo build --release --target ${{ matrix.target }}
-      - run: cargo test --release --target ${{ matrix.target }}
-      - run: cargo doc --release --target ${{ matrix.target }}
+      - run: cargo test --release --target ${{ matrix.target }} ${{ matrix.features }}
+      - run: cargo doc --release --target ${{ matrix.target }} ${{ matrix.features }}
 
   tests-2:
     strategy:
@@ -46,17 +46,18 @@ jobs:
           - macos-latest
           - windows-latest
         toolchain:
+          - 1.59
           - stable
           - nightly
-    name: Test ${{ matrix.toolchain }} on ${{ matrix.os }}
+        features:
+          -
+    name: Test ${{ matrix.toolchain }} on ${{ matrix.os }} (${{ matrix.features }})
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
-      - uses: actions-rs/toolchain@v1
+      - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
-          profile: minimal
           toolchain: ${{ matrix.toolchain }}
-          override: true
-      - run: cargo build --release
-      - run: cargo test --release
-      - run: cargo doc --release
+          target: ${{ matrix.target }}
+      - run: cargo test --release ${{ matrix.features }}
+      - run: cargo doc --release ${{ matrix.features }}
