--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
   rustfmt:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           toolchain: nightly
@@ -23,7 +23,7 @@ jobs:
         run: |
           sudo apt update
           sudo apt install libpcsclite-dev
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           components: clippy
@@ -36,7 +36,6 @@ jobs:
         os:
           - ubuntu-latest
         toolchain:
-          - 1.64
           - stable
           - nightly
         target:
@@ -50,7 +49,7 @@ jobs:
         run: |
           sudo apt update
           sudo apt install libpcsclite-dev
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           toolchain: ${{ matrix.toolchain }}
@@ -66,7 +65,6 @@ jobs:
           - macos-latest
           - windows-latest
         toolchain:
-          - 1.64
           - stable
           - nightly
         features:
@@ -74,9 +72,55 @@ jobs:
     name: Test ${{ matrix.toolchain }} on ${{ matrix.os }} (${{ matrix.features }})
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           toolchain: ${{ matrix.toolchain }}
       - run: cargo test ${{ matrix.features }}
       - run: cargo doc ${{ matrix.features }}
+
+  MSRV-1:
+    strategy:
+      fail-fast: false
+      matrix:
+        os:
+          - ubuntu-latest
+        toolchain:
+          - 1.70
+        target:
+          - x86_64-unknown-linux-gnu
+        features:
+          -
+    name: Test ${{ matrix.toolchain }} on ${{ matrix.os }} to ${{ matrix.target }} (${{ matrix.features }})
+    runs-on: ${{ matrix.os }}
+    steps:
+      - name: Install libpcsclite-dev
+        run: |
+          sudo apt update
+          sudo apt install libpcsclite-dev
+      - uses: actions/checkout@v4
+      - uses: actions-rust-lang/setup-rust-toolchain@v1
+        with:
+          toolchain: ${{ matrix.toolchain }}
+          target: ${{ matrix.target }}
+      - run: cargo test --lib --bins --target ${{ matrix.target }} ${{ matrix.features }}
+
+  MSRV-2:
+    strategy:
+      fail-fast: false
+      matrix:
+        os:
+          - macos-latest
+          - windows-latest
+        toolchain:
+          - 1.70
+        features:
+          -
+    name: Test ${{ matrix.toolchain }} on ${{ matrix.os }} (${{ matrix.features }})
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions-rust-lang/setup-rust-toolchain@v1
+        with:
+          toolchain: ${{ matrix.toolchain }}
+      - run: cargo test --lib --bins ${{ matrix.features }}
