--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 rust-version = "1.70"
 repository = "https://github.com/magiclen/tw-nhi-icc-service"
 homepage = "https://magiclen.org/tw-nhi-icc-service"
+publish = false
 keywords = ["smart-card", "pcsc", "nhi-card", "ic-card", "taiwan"]
 categories = ["command-line-utilities"]
 description = "Read Taiwan NHI cards via HTTP API. 透過 HTTP API 讀取中華民國健保卡。"
