--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,9 +33,16 @@ enable-ansi-support = "0.2"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 serde = { version = "1", features = ["derive"] }
-axum = "0.6"
+serde_json = "1"
+axum = { version = "0.6", features = ["ws"] }
 tower-http = { version = "0.4", features = ["trace", "set-header", "cors"] }
 
+once_cell = "1"
 pcsc = "2"
 chrono = { version = "0.4", features = ["serde"] }
 encoding_rs = "0.8"
+
+[dependencies.educe]
+version = "0.4"
+features = ["Debug"]
+default-features = false
