--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ terminal_size = "0.3"
 anyhow = "1"
 
 tokio = { version = "1", features = ["full"] }
+futures = "0.3"
 
 tracing = "0.1"
 enable-ansi-support = "0.2"
