--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "tw-nhi-icc-service"
-version = "0.1.5"
+version = "0.2.0"
 authors = ["Magic Len <len@magiclen.org>"]
 edition = "2021"
 rust-version = "1.70"
 repository = "https://github.com/magiclen/tw-nhi-icc-service"
-homepage = "https://magiclen.org/tw-nhi-icc-service"
+homepage = "https://magiclen.org/tw-nhi-icc"
 publish = false
 keywords = ["smart-card", "pcsc", "nhi-card", "ic-card", "taiwan"]
 categories = ["command-line-utilities"]
